--- a/Workflow.bib
+++ b/Workflow.bib
@@ -1127,3 +1127,61 @@ year = {2015}
   language = {en},
   number = {1}
 }
+@article{Islam2014,
+  title = {Quantitative Single-Cell {{RNA}}-Seq with Unique Molecular Identifiers},
+  author = {Islam, Saiful and Zeisel, Amit and Joost, Simon and La Manno, Gioele and Zajac, Pawel and Kasper, Maria and L{\"o}nnerberg, Peter and Linnarsson, Sten},
+  year = {2014},
+  month = feb,
+  volume = {11},
+  pages = {163--166},
+  issn = {1548-7091, 1548-7105},
+  doi = {10.1038/nmeth.2772},
+  file = {/home/alan/Zotero/storage/YXAL4TB8/Islam et al. - 2014 - Quantitative single-cell RNA-seq with unique molec.pdf},
+  journal = {Nature Methods},
+  language = {en},
+  number = {2}
+}
+@article{Mojtahedi2016,
+  title = {Cell {{Fate Decision}} as {{High}}-{{Dimensional Critical State Transition}}},
+  author = {Mojtahedi, Mitra and Skupin, Alexander and Zhou, Joseph and Casta{\~n}o, Ivan G. and {Leong-Quong}, Rebecca Y. Y. and Chang, Hannah and Trachana, Kalliopi and Giuliani, Alessandro and Huang, Sui},
+  year = {2016},
+  month = dec,
+  volume = {14},
+  pages = {e2000640},
+  issn = {1545-7885},
+  doi = {10.1371/journal.pbio.2000640},
+  file = {/home/alan/Zotero/storage/GUJ9QJRV/Mojtahedi et al. - 2016 - Cell Fate Decision as High-Dimensional Critical St.pdf},
+  journal = {PLOS Biology},
+  language = {en},
+  number = {12}
+}
+@article{Lin2019,
+  title = {Evaluating Stably Expressed Genes in Single Cells},
+  author = {Lin, Yingxin and Ghazanfar, Shila and Strbenac, Dario and Wang, Andy and Patrick, Ellis and Lin, David M and Speed, Terence and Yang, Jean Y H and Yang, Pengyi},
+  year = {2019},
+  month = sep,
+  volume = {8},
+  pages = {giz106},
+  issn = {2047-217X},
+  doi = {10.1093/gigascience/giz106},
+  abstract = {Background: Single-cell RNA-seq (scRNA-seq) profiling has revealed remarkable variation in transcription, suggesting that expression of many genes at the single-cell level is intrinsically stochastic and noisy. Yet, on the cell population level, a subset of genes traditionally referred to as housekeeping genes (HKGs) are found to be stably expressed in different cell and tissue types. It is therefore critical to question whether stably expressed genes (SEGs) can be identified on the single-cell level, and if so, how can their expression stability be assessed? We have previously proposed a computational framework for ranking expression stability of genes in single cells for scRNA-seq data normalization and integration. In this study, we perform detailed evaluation and characterization of SEGs derived from this framework. Results: Here, we show that gene expression stability indices derived from the early human and mouse development scRNA-seq datasets and the ''Mouse Atlas'' dataset are reproducible and conserved across species. We demonstrate that SEGs identified from single cells based on their stability indices are considerably more stable than HKGs defined previously from cell populations across diverse biological systems. Our analyses indicate that SEGs are inherently more stable at the single-cell level and their characteristics reminiscent of HKGs, suggesting their potential role in sustaining essential functions in individual cells. Conclusions: SEGs identified in this study have immediate utility both for understanding variation and stability of single-cell transcriptomes and for practical applications such as scRNA-seq data normalization. Our framework for calculating gene stability index, ''scSEGIndex,'' is incorporated into the scMerge Bioconductor R package (https://sydneybiox.github.io/scMerge/reference/scSEGIndex.html) and can be used for identifying genes with stable expression in scRNA-seq datasets.},
+  file = {/home/alan/Zotero/storage/EFQFCDP9/Lin et al. - 2019 - Evaluating stably expressed genes in single cells.pdf},
+  journal = {GigaScience},
+  language = {en},
+  number = {9}
+}
+@article{Haque2017,
+  title = {A Practical Guide to Single-Cell {{RNA}}-Sequencing for Biomedical Research and Clinical Applications},
+  author = {Haque, Ashraful and Engel, Jessica and Teichmann, Sarah A. and L{\"o}nnberg, Tapio},
+  year = {2017},
+  month = dec,
+  volume = {9},
+  pages = {75},
+  issn = {1756-994X},
+  doi = {10.1186/s13073-017-0467-4},
+  abstract = {RNA sequencing (RNA-seq) is a genomic approach for the detection and quantitative analysis of messenger RNA molecules in a biological sample and is useful for studying cellular responses. RNA-seq has fueled much discovery and innovation in medicine over recent years. For practical reasons, the technique is usually conducted on samples comprising thousands to millions of cells. However, this has hindered direct assessment of the fundamental unit of biology\textemdash{}the cell. Since the first single-cell RNA-sequencing (scRNA-seq) study was published in 2009, many more have been conducted, mostly by specialist laboratories with unique skills in wet-lab single-cell genomics, bioinformatics, and computation. However, with the increasing commercial availability of scRNA-seq platforms, and the rapid ongoing maturation of bioinformatics approaches, a point has been reached where any biomedical researcher or clinician can use scRNA-seq to make exciting discoveries. In this review, we present a practical guide to help researchers design their first scRNA-seq studies, including introductory information on experimental hardware, protocol choice, quality control, data analysis and biological interpretation.},
+  file = {/home/alan/Zotero/storage/59XCU6GG/Haque et al. - 2017 - A practical guide to single-cell RNA-sequencing fo.pdf},
+  journal = {Genome Medicine},
+  language = {en},
+  number = {1}
+}
